- Use java 17 - add dependency mapstruct - rename some files